[docs] Add a note about requiring gtk_init()

Be more explicit on requiring GTK+ to be initialized before using
LibUnique.

Fixes bug:

  http://bugzilla.gnome.org/show_bug.cgi?id=585536